--- a/900/index.html
+++ b/900/index.html
@@ -80,12 +80,10 @@
 			<tr>
 			<td align="center" colspan="3"><a href="#" class="button" onclick="ps4debug(); return false" style="width:29%">PS4 Debug</a>
 			<a href="#" class="button" onclick="webrte(); return false" style="width:29%">WebRTE</a>
-			<a href="#" class="button" onclick="permanentuart(); return false" style="width:29%">Permanent UART</a></td>
+			<a href="#" class="button" onclick="disableupdates(); return false" style="width:29%">Disable Updates</a></td>
 			</tr><tr><td><br/></td></tr>
 			<tr>
-			<td align="center" colspan="3"><a href="#" class="button" onclick="exitidu(); return false" style="width:29%">Exit IDU</a>
 			<a href="#" class="button" onclick="todex(); return false" style="width:29%">To-DEX</a>
-			<a href="#" class="button" onclick="disableaslr(); return false" style="width:29%">Disable ASLR</a></td>
 			</tr>
 			</table></div>
 	</body>
