--- a/900/index.html
+++ b/900/index.html
@@ -81,9 +81,9 @@
 			<td align="center" colspan="3"><a href="#" class="button" onclick="ps4debug(); return false" style="width:29%">PS4 Debug</a>
 			<a href="#" class="button" onclick="webrte(); return false" style="width:29%">WebRTE</a>
 			<a href="#" class="button" onclick="disableupdates(); return false" style="width:29%">Disable Updates</a></td>
-			</tr><tr><td><br/></td></tr>
+			</tr>
 			<tr>
-			<a href="#" class="button" onclick="todex(); return false" style="width:29%">To-DEX</a>
+			<td align="center" colspan="3"><a href="#" class="button" onclick="todex(); return false" style="width:29%">To-DEX</a>
 			</tr>
 			</table></div>
 	</body>
