--- a/900/index.html
+++ b/900/index.html
@@ -79,7 +79,7 @@
 			</td>
 			<tr>
 			<td align="center" colspan="3"><a href="#" class="button" onclick="ps4debug(); return false" style="width:29%">PS4 Debug</a>
-			<a href="#" class="button" onclick="gta138(); return false" style="width:29%">GTAV Mod 138</a>
+			<a href="#" class="button" onclick="webrte(); return false" style="width:29%">Web RTE</a>
 			<a href="#" class="button" onclick="disableupdates(); return false" style="width:29%">Disable Updates</a></td>
 			</tr>
 			<tr>
