--- a/900/index.html
+++ b/900/index.html
@@ -83,7 +83,7 @@
 			<a href="#" class="button" onclick="disableupdates(); return false" style="width:29%">Disable Updates</a></td>
 			</tr>
 			<tr>
-			<td align="center" colspan="3"><a href="#" class="button" onclick="dumper(); return false" style="width:29%">Dump Game</a>
+			<td align="center" colspan="3"><a href="#" class="button" onclick="appdumper(); return false" style="width:29%">Dump Game</a>
 			</tr>
 			</table></div>
 	</body>
