--- a/900/index.html
+++ b/900/index.html
@@ -49,7 +49,7 @@
 		}
 	</style>
 	<head>
-		<title>PS4 Jailbreak 9.00</title>
+		<title>PS4 Jailbreak 9.00 sonicps</title>
 		<script>
 			function loadcomplete() {
 				document.getElementById("progress").innerHTML=sessionStorage.Queue+" Loaded Successfully !!";
@@ -58,7 +58,6 @@
 		</script>
 		<script src="int64.js"></script>
 		<script src="rop.js"></script>
-		<script src="kexploit.js"></script>
 		<script src="webkit.js"></script>
 		<script src="payloads.js"></script>
 	</head>
@@ -69,13 +68,13 @@
 			window.applicationCache.onprogress=function(a){document.getElementById("progress").innerHTML="Caching Status: "+(Math.round(100*(a.loaded/a.total)))+"% Completed"};
 			window.applicationCache.oncached=function(){document.getElementById("progress").innerHTML="Cache sukses!!";setTimeout(function(){document.getElementById("progress").innerHTML="Matikan Internet & Buka lagi browser untuk proses exploit!!"; }, 1500);};
 		</script>
-		<h1 id="progress" class="titlehead">PS4 Jailbreak 9.00</h1><hr><br>
+		<h1 id="progress" class="titlehead">PS4 Jailbreak 9.00 sonicps</h1><hr><br>
 		<input type="hidden" id="psip" value="localhost"/>
 		<div>
 			<table align="center" style="width:600px;margin-top:30px;">
 			<tr>
 			<td align="center" id="exploit" colspan="2">
-			<a href="#" class="button" onclick="goldhen(); return false" style="width:43%">Exploit + GoldHEN V2b</a>
+			<a href="#" class="button" onclick="goldhen(); return false" style="width:43%">Pilih GoldHEN</a>
 			</td>
 			<tr>
 			<td align="center" colspan="3"><a href="#" class="button" onclick="ps4debug(); return false" style="width:29%">PS4 Debug</a>
